--- a/updatemanifest.plist
+++ b/updatemanifest.plist
@@ -10,11 +10,11 @@
 			<key>Developer Identifier</key>
 			<string>NVR7RDRLB9</string>
 			<key>CFBundleVersion</key>
-			<string>1</string>
+			<string>1.0.1</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1.0</string>
+			<string>1.0.1</string>
 			<key>URL</key>
-			<string>https://github.com/downloads/EriksRemess/geekit-safari/Geekit%20for%20Safari.safariextz</string>
+			<string>https://github.com/downloads/EriksRemess/geekit-safari/GeekitForSafari_1.0.1.safariextz</string>
 		</dict>
 	</array>
 </dict>
